kubernetes/all/delivery-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: delivery-redis
  name: delivery-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: delivery-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: delivery-redis
    spec:
      containers:
        - args:
            - redis-server
            - --appendonly
            - "yes"
          image: redis:latest
          name: delivery-redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: goodfood-delivery-volume
      restartPolicy: Always
      volumes:
        - name: goodfood-delivery-volume
          persistentVolumeClaim:
            claimName: goodfood-delivery-volume
