kubernetes/all/event-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: event-broker
  name: event-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      service: event-broker
  strategy: {}
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: event-broker
    spec:
      containers:
        - image: rabbitmq:3-management
          name: event-broker
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
