kubernetes/all/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: notification-service
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: notification-service
  strategy: {}
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: notification-service
    spec:
      containers:
        - env:
            - name: AMQP_URL
              valueFrom:
                configMapKeyRef:
                  key: AMQP_URL
                  name: notification--env-docker
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_URL
                  name: notification--env-docker
            - name: PLUNK_PROJECT_NAME
              valueFrom:
                configMapKeyRef:
                  key: PLUNK_PROJECT_NAME
                  name: notification--env-docker
            - name: PLUNK_PUBLIC_KEY
              valueFrom:
                configMapKeyRef:
                  key: PLUNK_PUBLIC_KEY
                  name: notification--env-docker
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: notification--env-docker
          image: goodfood-notification:1.0.0
          name: notification-service
          ports:
            - containerPort: 50022
          resources: {}
      restartPolicy: Always
