kubernetes/all/product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: product-service
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: product-service
  strategy: {}
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: product-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - env:
            - name: AMQP_URL
              valueFrom:
                configMapKeyRef:
                  key: AMQP_URL
                  name: product--env-docker
            - name: AZURE_STORAGE_RESOURCE_NAME
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_RESOURCE_NAME
                  name: product--env-docker
            - name: AZURE_STORAGE_SAS_TOKEN
              valueFrom:
                configMapKeyRef:
                  key: AZURE_STORAGE_SAS_TOKEN
                  name: product--env-docker
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_URL
                  name: product--env-docker
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: product--env-docker
          image: floriaaan/goodfood-product:1.0.0
          name: product-service
          ports:
            - containerPort: 50004
          resources: {}
      restartPolicy: Always
