kubernetes/all/stock-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: stock-postgres
  name: stock-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      service: stock-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: stock-postgres
    spec:
      containers:
        - env:
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: postgres
          image: postgres:latest
          name: stock-postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: goodfood-stock-volume
      restartPolicy: Always
      volumes:
        - name: goodfood-stock-volume
          persistentVolumeClaim:
            claimName: goodfood-stock-volume
