kubernetes/all/stripe-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: stripe-cli
  name: stripe-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      service: stripe-cli
  strategy: {}
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: stripe-cli
    spec:
      containers:
        - args:
            - listen
            - --forward-to
            - gateway:4242/webhook
          image: stripe/stripe-cli
          name: stripe-cli
          resources: {}
      restartPolicy: Always
