kubernetes/all/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: user-service
  strategy: {}
  template:
    metadata:
      labels:
        network/goodfood-network: "true"
        service: user-service
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_URL
                  name: user-dev-env
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  key: DB_URL
                  name: user-dev-env
            - name: DEFAULT_USER_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: DEFAULT_USER_EMAIL
                  name: user-dev-env
            - name: DEFAULT_USER_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DEFAULT_USER_PASSWORD
                  name: user-dev-env
            - name: JWT_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET_KEY
                  name: user-dev-env
            - name: LOG_FILE_PATH
              valueFrom:
                configMapKeyRef:
                  key: LOG_FILE_PATH
                  name: user-dev-env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: user-dev-env
          image: floriaaan/goodfood-user:1.0.0
          name: user-service
          ports:
            - containerPort: 50001
          resources: {}
      restartPolicy: Always
