kubernetes/all/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: gateway
  name: gateway
spec:
  ports:
    - name: "50000"
      port: 50000
      targetPort: 50000
    - name: "4242"
      port: 4242
      targetPort: 4242
  selector:
    service: gateway
status:
  loadBalancer: {}
