kubernetes/all/order-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: order-postgres
  name: order-postgres
spec:
  ports:
    - name: "51007"
      port: 51007
      targetPort: 5432
  selector:
    service: order-postgres
status:
  loadBalancer: {}
