kubernetes/all/payment-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: payment-postgres
  name: payment-postgres
spec:
  ports:
    - name: "51003"
      port: 51003
      targetPort: 5432
  selector:
    service: payment-postgres
status:
  loadBalancer: {}
