kubernetes/all/goodfood-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: goodfood-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/goodfood-network: "true"
  podSelector:
    matchLabels:
      network/goodfood-network: "true"
